Try to fix weird highlight jumping bug

--- a/src/styles/components/_text.scss
+++ b/src/styles/components/_text.scss
@@ -49,12 +49,14 @@ button, .btn, a, span, p, input {
 // **********************
 
 .text-highlight {
-  width: fit-content;
+  // width: fit-content;
+  display: inline-block;
   position: relative;
   z-index: 5;
   
   .hightlight-block {
     position: absolute;
+    // position: relative;
     z-index: -3;
     top: 50%;
     left: 1rem; 
@@ -62,6 +64,7 @@ button, .btn, a, span, p, input {
     height: 55%;
     background-color: $primary-color-light;
   }
+
 
   &.animated {
     .hightlight-block {
