--- a/src/styles/util/_general.scss
+++ b/src/styles/util/_general.scss
@@ -19,3 +19,7 @@ body {
   background-color: $background-color-primary;
   position: relative;
 }
+
+.test-border {
+  border: 2px dotted blue;
+}
